fix mobile spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2801,9 +2801,9 @@ input, select, textarea {
 				padding: 3em 2.5em;
 			}
 
-				.wrapper.special br {
+				/* .wrapper.special br {
 					display: none;
-				}
+				} */
 
 				.wrapper.style1 {
 					padding: 0 2.5em;
@@ -3248,9 +3248,9 @@ input, select, textarea {
 				padding: 2.25em 1.5em;
 			}
 
-				.wrapper.special br {
+				/* .wrapper.special br {
 					display: none;
-				}
+				} */
 
 				.wrapper.style1 {
 					padding: 0 1.5em;
